--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Club - Where Passion Meets Play</title>
+    <title>Curiouusity- Where Passion Meets Play</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="bg-primary text-white text-center py-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="#">Game Club</a>
+            <a class="navbar-brand" href="#">Curiouusity</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,7 +32,7 @@
 
     <main class="container my-5">
         <section id="about" class="py-5">
-            <h1 class="display-4">Welcome to Our Game Club</h1>
+            <h1 class="display-4">Welcome to Curiouusity</h1>
             <p class="lead">Dive into an immersive world of gaming where strategy, adventure, and camaraderie come alive. Our game club offers an exceptional environment for gamers of all levels to explore, compete, and connect. From casual meetups to intense tournaments, we’re dedicated to creating memorable experiences that go beyond just gaming.</p>
             <button class="btn btn-primary btn-lg">Learn More</button>
         </section>
@@ -122,7 +122,7 @@
     </main>
 
     <footer class="bg-dark text-white text-center py-4">
-        <p>&copy; 2024 Game Club. All rights reserved.</p>
+        <p>&copy; 2024 Curiouusity. All rights reserved.</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
