--- a/services.html
+++ b/services.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services - Game Club</title>
+    <title>Our Services - Curiouusity</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="bg-primary text-white text-center py-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="index.html">Game Club</a>
+            <a class="navbar-brand" href="index.html">Curiouusity</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,7 +33,7 @@
     <main class="container my-5">
         <section id="services" class="py-5">
             <h1 class="display-4">Our Services</h1>
-            <p class="lead">At Game Club, we go beyond just providing a place to play. We offer a wide range of services that cater to every type of gamer. Whether you're looking to dive into a solo adventure, host a competitive tournament, or simply hang out with friends, we've got you covered:</p>
+            <p class="lead">At Curiouusity, we go beyond just providing a place to play. We offer a wide range of services that cater to every type of gamer. Whether you're looking to dive into a solo adventure, host a competitive tournament, or simply hang out with friends, we've got you covered:</p>
 
             <div class="row">
                 <div class="col-md-6 mb-4">
@@ -91,7 +91,7 @@
     </main>
 
     <footer class="bg-dark text-white text-center py-4">
-        <p>&copy; 2024 Game Club. All rights reserved.</p>
+        <p>&copy; 2024 Curiouusity. All rights reserved.</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
